labs/lab2/testsuite/good/subtyping/cmp_if_double_gt_int.cc
int main () {
	if (5.0 > 3)
		int y;
	else {}
	return 0;
}
