labs/lab2/testsuite/bad/cmp_if_bool_gt_bool.cc
int main () {
	if (true > false) { } else { }
	return 0;
}
